src/objects/Leaderboard__c.object
<CustomObject>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Leaderboard</relationshipLabel>
        <relationshipName>Leaderboard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leaderboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leaderboard</label>
    <nameField>
        <displayFormat>LD-{0000}</displayFormat>
        <label>Leaderboard ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaderboard</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>